tests/cases/compiler/functionOverloads3.ts
function foo():string;
//~^ ERROR: Function implementation is missing or not immediately following the declaration.